# src/atoms/ProviderSelection/types.ts
@@ -6,6 +6,9 @@ import {
   Gender,
   type GetProvidersInputType,
   Modality,
+  TimeOfTheDay,
+  Language,
+  Insurance,
   LocationState,
   LocationFacility,
   LocationStateToNameMapping,
@@ -20,6 +23,9 @@ export type FilterEnum = Record<string, string | number> &
     | typeof Gender
     | typeof Ethnicity
     | typeof Modality
+    | typeof TimeOfTheDay
+    | typeof Language
+    | typeof Insurance
     | typeof ClinicalFocus
     | typeof DeliveryMethod
     | typeof LocationState
