# src/lib/api/schema/atoms/TimeOfTheDay.schema.ts
@@ -1,0 +1,9 @@
+import { z } from 'zod';
+
+export enum TimeOfTheDay {
+  'Morning' = 'Morning',
+  'Afternoon' = 'Afternoon',
+  'Evening' = 'Evening'
+}
+
+export const TimeOfTheDaySchema = z.nativeEnum(TimeOfTheDay).optional();
