# src/lib/api/schema/atoms/index.ts
@@ -9,3 +9,5 @@ export * from './LocationState.schema';
 export * from './TherapeuticModality.schema';
 export * from './DeliveryMethod.schema';
 export * from './EventDeliveryMethod.schema';
+export * from './TimeOfTheDay.schema';
+export * from './Insurance.schema';
